<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KUAPP</string>
    <string name="settings">Settings</string>
    <string name="preference">Preference</string>
    <string name="setPreference">SetPreference</string>
    <string name="faculty">Faculty</string>
    <string name="courses">Courses</string>
    <string name="search">Search</string>
    <string name="time">Tid</string>
    <string name="place">Sted</string>
    
    <string name="color">Colors</string>
		<string name="background">Background Color</string>
    	<string name="background_info">Here you may choose which color you want for the background, throughout the application</string>
    
    	<string name="text">Text Color</string>
    	<string name="text_info">Here you may choose which color you want for the text throughout the appliaction</string>

    	<string name="black">Black</string>
    	<string name="white">White</string>
    	<string name="red">Red</string>
    	<string name="green">Green</string>
    	<string name="blue">Blue</string>
    	
    <string name="language">Language</string>
    	<string name="language_info">Here you may choose a language to use throughout the application</string>
    
    	<string name="english">English</string>
    	<string name="danish">Danish</string>
    
    	
    

</resources>